# openfpga

./: testcsp.py  testcsp2.py
src/: CMakeLists.txt
src/bittwiddler/: Cargo.toml
src/bittwiddler/src/: bitfragment.rs  bitpattern.rs  lib.rs
src/bittwiddler/tests/: basic_bitfragment.rs  basic_bitfragment_enum.rs  basic_bitfragment_unnamed.rs  basic_bitpattern.rs  basic_sub_bitfragment.rs  bool_bitpattern.rs  customname_bitpattern.rs  default_bitpattern.rs  error_bitpattern.rs  extra_data_basic.rs  extra_data_subdata.rs  extra_data_subdata_array.rs  fragment_array.rs  fragment_array_mirror.rs  offset_and_mirror_fragment.rs  offset_and_mirror_fragmentarray.rs  offset_and_mirror_pattern.rs  offset_and_mirror_patternarray.rs  pat_invert_fixed.rs  pat_pict.rs  pattern_array.rs  pattern_array_mirror.rs  subfragment_variants.rs  two_variants_bitpattern.rs  variants_bitfragment.rs
src/bittwiddler_macros/: Cargo.toml
src/coolrunner2/: CMakeLists.txt  Coolrunner2.h  Coolrunner2BitstreamEntity.cpp  Coolrunner2BitstreamEntity.h  Coolrunner2Device.cpp  Coolrunner2Device.h  Coolrunner2FB.cpp  Coolrunner2FB.h  Coolrunner2IBuf.cpp  Coolrunner2IBuf.h  Coolrunner2Information.h  Coolrunner2MCFF.cpp  Coolrunner2MCFF.h  Coolrunner2MCXorGate.cpp  Coolrunner2MCXorGate.h  Coolrunner2OBuf.cpp  Coolrunner2OBuf.h  Coolrunner2PTerm.cpp  Coolrunner2PTerm.h  Coolrunner2STerm.cpp  Coolrunner2STerm.h  Coolrunner2ZIANode.cpp  Coolrunner2ZIANode.h
src/gp4par/: Greenpak4PAREngine.cpp  Greenpak4PAREngine.h  par_main.cpp
src/xbpar/: CMakeLists.txt  PAREngine.cpp  PARGraph.cpp  PARGraph.h  (+2 more)
(+41 files in other folders)
