[package]
name = "bittwiddler"
version = "0.0.3"
authors = ["R. Ou <rqou@robertou.com>"]
license = "BSD-2-Clause"
description = "Magic macros for helping to read/write bitstreams"
repository = "https://github.com/azonenberg/openfpga/tree/master/src/bittwiddler"
edition = "2018"

[dependencies]
bittwiddler_macros = { path = "../bittwiddler_macros", version = "0.0.1" }
